--- a/web/index.html
+++ b/web/index.html
@@ -14,6 +14,6 @@
   </style></head>
 <body>
   <div id="console"></div>
-  <script src="http://{{domain}}/bundle.js"></script>
+  <script src="/bundle.js"></script>
 </body>
 </html>
